Fixed misalignment Current Location button

--- a/src/client/components/Store/style/OfferForm.scss
+++ b/src/client/components/Store/style/OfferForm.scss
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
+.GeoLoc__container{
+  padding-right: 22px;
+}
+
 .GeoLoc__floatText {
   margin: 50px 0 5px 0;
   pointer-events: none;
